added properties: dateStarted, dateFinished, and tags to blog Object. index and blog details page now display dates read and tags.

--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -34,10 +34,10 @@
 
 <!-- TO DO: change date input value to show current date -->
           <div class="form-row">
-            <label for="startDate">Started:</label>
+            <label for="dateStarted">Started:</label>
             <input
-            id="startDate"
-            name="startDate"
+            id="dateStarted"
+            name="dateStarted"
             type="date"
             value="2021-10-15"
             min="1992-11-16"
@@ -46,30 +46,15 @@
           </div>
 
           <div class="form-row">
-            <label for="endDate">Finished:</label>
+            <label for="dateFinished">Finished:</label>
             <input
-            id="endDate"
-            name="endDate"
+            id="dateFinished"
+            name="dateFinished"
             type="date"
-            value="2021-10-15"
             min="1992-11-16"
             max="2092-11-16"
             />
           </div>
-<!-- TO DO: add boxes to select from-->
-          <!-- <div class="form-row-full">
-            <label for="tag" class="label">Tags:</label>
-
-            <select id="tags" name="tags" form="create-form" multiple>
-              <option value="sci-fi-fantasy">Sci-fi / Fantasy</option>
-              <option value="fiction">Fiction</option>
-              <option value="short-story">Short Story</option>
-              <option value="nonfiction">Non-Fiction</option>
-              <option value="biography">Biography</option>
-              <option value="classical">Classical</option>
-
-            </select>
-          </div>    -->
 
           <div class="form-row-full">
             <fieldset>
