--- a/views/blogs/edit.ejs
+++ b/views/blogs/edit.ejs
@@ -34,10 +34,10 @@
   
 <!-- TO DO: change date input value to show current date -->
           <div class="form-row">
-            <label for="startDate">Started:</label>
+            <label for="dateStarted">Started:</label>
             <input
-            id="startDate"
-            name="startDate"
+            id="dateStarted"
+            name="dateStarted"
             type="date"
             value="2021-10-15"
             min="1992-11-16"
@@ -46,10 +46,10 @@
           </div>
 
           <div class="form-row">
-            <label for="endDate">Finished:</label>
+            <label for="dateFinished">Finished:</label>
             <input
-            id="endDate"
-            name="endDate"
+            id="dateFinished"
+            name="dateFinished"
             type="date"
             value="2021-10-15"
             min="1992-11-16"
