--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,13 @@
 <header>
   <div class="title-banner-container">
-    <img
+    <a href="/blogs">
+      <img
       class="title-banner-image"
       src="../../images/title-banner.svg"
       alt="A banner displaying the 
         title: 'Books to Read'. The words sit on a shelf of books."
     />
+  </a>
+ 
   </div>
 </header>
