--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
       <span><a href="#">Categories</a>▾</span>
       <ul class="categories-menu">
         <li><a href="#">Blogs</a></li>
-        <li><a href="/categories/authors">Authors</a></li>
+        <li><a href="/categories/allAuthors">Authors</a></li>
       </ul>
     </li>
     <li class="dropdown">
