--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -60,32 +60,44 @@
             <fieldset>
                 <legend>Tags:</legend>
               <div class="tag-option">
-                <input type="checkbox" id="sci-fi-fantasy" name="tags" value="sci-fi-fantasy">
-                <label for="sci-fi-fantasy">Sci-fi / Fantasy</label>
+                <input type="checkbox" id="sci-fi" name="tags" value="Sci-fi">
+                <label for="sci-fi">Sci-fi</label>
               </div>
               <div class="tag-option">
-                <input type="checkbox" id="informative" name="tags" value="informative">
+                <input type="checkbox" id="fantasy" name="tags" value="Fantasy">
+                <label for="fantasy">Fantasy</label>
+              </div>
+              <div class="tag-option">
+                <input type="checkbox" id="informative" name="tags" value="Informative">
                 <label for="informative">Informative</label>
               </div>
               <div class="tag-option">
-                <input type="checkbox" id="fiction" name="tags" value="fiction">
+                <input type="checkbox" id="fiction" name="tags" value="Fiction">
                 <label for="fiction">Fiction</label>
               </div>
               <div class="tag-option">
-                <input type="checkbox" id="short-story" name="tags" value="short-story">
+                <input type="checkbox" id="short-story" name="tags" value="Short Story">
                 <label for="short-story">Short Story</label>
               </div>
               <div class="tag-option">
-                <input type="checkbox" id="non-fiction" name="tags" value="non-fiction">
+                <input type="checkbox" id="non-fiction" name="tags" value="Non-fiction">
                 <label for="non-fiction">Non-Fiction</label>
               </div>
               <div class="tag-option">
-                <input type="checkbox" id="biography" name="tags" value="biography">
+                <input type="checkbox" id="biography" name="tags" value="Biography">
                 <label for="biography">Biography</label>
               </div>
               <div class="tag-option">
-                <input type="checkbox" id="classical" name="tags" value="classical">
+                <input type="checkbox" id="classical" name="tags" value="Classical">
                 <label for="classical">Classical</label>
+              </div>
+              <div class="tag-option">
+                <input type="checkbox" id="comedy" name="tags" value="Comedy">
+                <label for="comedy">Comedy</label>
+              </div>
+              <div class="tag-option">
+                <input type="checkbox" id="horror" name="tags" value="Horror">
+                <label for="horror">Horror</label>
               </div>
             </fieldset>
           </div> 
