--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,27 +1,16 @@
 <div class="nav">
   <ul class="menu">
-    <li><a href="/">Home</a></li>
+
+    <li><a href="/categories/allAuthors">All Authors</a></li>
+
     <li class="dropdown">
-      <span><a href="#">Categories</a>▾</span>
+      <span><a href="/categories/allTags">Tags</a>▾</span>
       <ul class="categories-menu">
-        <li><a href="#">Blogs</a></li>
-        <li><a href="/categories/allAuthors">Authors</a></li>
+        <li><a href="#">Sci-Fi</a></li>
+        <li><a href="#">Fantasy</a></li>
       </ul>
     </li>
-    <li class="dropdown">
-      <span>Search</span>
-      <ul class="search-field">
-        <li>
-          <form class="search-form">
-            <label for="search-input" class="label"></label>
-            <input id="search-input" name="search-input" type="text" />
-          </form>
-        </li>
-        <li>
-          <button id="search-for-keyword-button">Search!</button>
-        </li>
-      </ul>
-    </li>
+    
   </ul>
   <div class="create-blog-button-container">
     <a class="create-blog-button" href="/blogs/create">
