--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,5 @@
   <title>Reading Blog | <%= title %></title>
   <link rel="stylesheet" href="/styles.css" />
   <link rel="stylesheet" href="/contentBox.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Estonia&display=swap" rel="stylesheet">
 </head>
