mobile version works a bit better. border changes.

--- a/views/blogs/editBlog.ejs
+++ b/views/blogs/editBlog.ejs
@@ -71,7 +71,7 @@
                 <% const tagList = blog.tags %> 
               <div class="tag-option">
                 <input type="checkbox" id="sci-fi" name="tags" value="Sci-fi"
-                <% if(tagList.includes("sci-fi")){ %>
+                <% if(tagList.includes("Sci-fi")){ %>
                   checked="true"
                 <% } %> 
                 >
@@ -79,7 +79,7 @@
               </div>
               <div class="tag-option">
                 <input type="checkbox" id="fantasy" name="tags" value="Fantasy"
-                <% if(tagList.includes("fantasy")){ %>
+                <% if(tagList.includes("Fantasy")){ %>
                   checked="true"
                 <% } %> 
                 >
