--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <a href="/blogs">
       <img
       class="title-banner-image"
-      src="../../images/title-banner.svg"
+      src="../../images/title-banner-resized-optimized.svg"
       alt="A banner displaying the 
         title: 'Books to Read'. The words sit on a shelf of books."
     />
