--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -11,7 +11,7 @@
         <div class="content-box">
           <div class="top-container">
             <div class="card-col card-col-1">
-              <div class="card-line">
+              <div class="card-line title-line">
                 <a class="title" href="/blogs/blogDetails/<%= blogs[i].id %>">
                   <h1 class="title"><%= blogs[i].bookTitle %></h1>
                 </a>
@@ -26,7 +26,7 @@
 
               </div>
 
-              <div class="card-line">
+              <div class="card-line author-line">
                 <p class="author">by
                   <a class="authorLink" href="/categories/author/<%= blogs[i].authorID %>">
                     <%= blogs[i].author %>
@@ -80,7 +80,6 @@
                       <% tagsArray.forEach((tag) => { %>
                         <a class="tags-value" href="/categories/tagDetails/<%= tag %>">
                           <%= tag %>
-                          <%# tagsArray.join(', ') %>
                         </a>
                       <% }) %> 
                   <% } %> 
@@ -90,7 +89,7 @@
             </div>
             <div class="card-col card-col-2">
               <img
-                class="stock-image"
+                class="card-image"
                 src="./images/test-image-opt.svg"
                 alt="An image of some stylized purple outlined trees on a dark landscape."
               />
