--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reading Blog | <%= title %></title>
-  <link rel="stylesheet" href="/styles.css" />
-  <link rel="stylesheet" href="/contentBox.css" />
+  <link rel="stylesheet" href="/css/universal.css" />
+  <link rel="stylesheet" href="/css/contentBox.css" />
+  <link rel="stylesheet" href="/css/form.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Estonia&display=swap" rel="stylesheet">
 </head>
